@@ -49,7 +49,7 @@ unless (-e "$WORK_DIR"){
 my $testfile = File::Spec->catfile($WORK_DIR, "test26.log");
 my $testpath = File::Spec->catfile($WORK_DIR, "test26");
 
-BEGIN {plan tests => 26}
+BEGIN {plan tests => 27}
 
 sub unlink_testfiles {
     unlink $testfile;
@@ -437,6 +437,26 @@ $content = join '', <FILE>;
 close FILE;
 
 is($content, "This is a nice header.\n", "header_text");
+
+
+# same with syswrite
+unlink "${testfile}_5";
+$data = qq(
+log4perl.category         = DEBUG, Logfile
+log4perl.appender.Logfile          = Log::Log4perl::Appender::File
+log4perl.appender.Logfile.filename = ${testfile}_5
+log4perl.appender.Logfile.header_text = This is a nice header.
+log4perl.appender.Logfile.syswrite = 1
+log4perl.appender.Logfile.layout   = Log::Log4perl::Layout::SimpleLayout
+);
+
+Log::Log4perl->init(\$data);
+Log::Log4perl->get_logger->debug( "waah!" );
+open FILE, "<${testfile}_5" or die "Cannot open ${testfile}_5";
+$content = join '', <FILE>;
+close FILE;
+
+is($content, "This is a nice header.\nDEBUG - waah!\n", "header_text");
 
 ####################################################
 # Create path if it is not already created
